--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Edureka</groupId>
-  <artifactId>Training</artifactId>
+  <artifactId>TrainingLive</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Training institue</name>
+  <name>TrainingLive</name>
 
 	
 	
@@ -72,4 +72,47 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
   </dependencies>
+  <build>
+		<sourceDirectory>src</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>src</directory>
+			</resource>
+		</resources>
+
+		<plugins>
+			<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-surefire-plugin</artifactId>
+				  <version>3.0.0-M7</version>
+				  <configuration>
+				    <suiteXmlFiles>
+				      <suiteXmlFile>testng.xml</suiteXmlFile>
+				    </suiteXmlFiles>
+				  </configuration>
+				</plugin>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>cp1252</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+			      <groupId>org.apache.maven.plugins</groupId>
+			      <artifactId>maven-compiler-plugin</artifactId>
+			      <version>3.11.0</version>
+			      <configuration>
+			        <encoding>UTF-8</encoding>
+			        <source>1.8</source>
+			        <target>1.8</target>
+			      </configuration>
+		    </plugin>
+		</plugins>
+	</build>
+
 </project>
